# compfest-spartans

./: .cursorrules  .dockerignore  .gitignore  DOCKER-RAG-README.md  Dockerfile.frontend  ESP32_POLLING_CODE.ino  ESP32_SmartBin_Design.md  ESP32_SmartBin_Integration.md  README.md  SmartBin_ESP32.ino  TRANSACTION_HISTORY_LOGBOOK.md  check_esp32_logs.py  debug_auth.py  docker-compose.yml  fix_scan_router.py  generate_test_token.py  get_bearer_token.py  logbook.md  oldenv  package-lock.json  package.json  phase.md  setorin.ino  start-rag-test.sh  test_authentication_fixes.js  test_esp32_communication.sh  test_esp32_curl.sh  test_esp32_local.py  test_jwt.py  test_mongodb_atlas.py  test_mongodb_cursor_fixes.js  test_scan_endpoint.py  test_scan_import.py  test_token.py
backend/: Dockerfile  classification_debug.py  debug_opencv_test.py  final_test.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  simple_debug_test.py  test_akhir_detection.py  test_final_bottle_detection.py  test_fix.py  test_improved_detection.py  test_pls_images.py  test_rag.py  test_user_images.py
backend/docs/: PROTOCOL_INTERFACES.md
backend/src/: rag_agent.py
backend/src/backend/: main.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/src/routers/: rag.py
backend/tests/integration/: test_oauth_flow.py
backend/tests/unit/: test_auth_middleware.py  test_auth_models.py  test_auth_router.py  test_auth_service.py  test_oauth_service.py  test_protocol_interfaces.py  test_reward_service.py  test_scan_router.py  (+4 more)
(+188 files in other folders)
