[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
]
[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.4",
]

[project.scripts]
start = "uvicorn src.backend.main:app --reload --host 0.0.0.0 --port 8000"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "A", "C4", "T10", "ISC", "TCH"]